# HEVC_FLV_Remux

./: .gitignore  .gitmodules  CMakeLists.txt  bili-live.c  bili-live.h  bili-live.py  build_ffmpeg.sh  flv_checker.c  flv_checker.h  remux.c  remux.h  remuxing.c  remuxmodule.c
examples/: bili-live.py
patches/: ffmpeg-4.x-hevc-flv.patch
src/: bili-live.c  bili-live.h  flv_checker.c  flv_checker.h  remux.c  remux.h  remuxmodule.c
